app/assets/stylesheets/_source.scss
/*
  SOURCE
  Elements related to the source model and views.
*/

/*
  Pane showing information on a single source
*/

// Container
.source-detail {
  @include clearfix;
  padding: 0.75em;
  border: 1px solid #ccc;
  border-radius: 8px;
  box-shadow: 0 3px 10px rgba(#000, 0.25);
  margin-bottom: 1em;
}
  // Indicator for type of source
  .source-detail__type {
    text-transform: uppercase;
    color: #666;
    font-weight: 600;
    margin-bottom: 0.5em;
  }
  // Image of source or placeholder icon
  .source-detail__thumb {
    margin-bottom: 1em;

    img {
      display: block;
      width: 40%;
      border: 1px solid #999;
      box-shadow: 0 4px 10px rgba(#000, 0.25);
    }
  }
  // Information list for source
  .source-detail__info {
    margin-bottom: 1em;

    dt {
      margin-bottom: 0;
      line-height: 1.1;

      &::after {
        content: ':';
      }
    }
    dt, dd {
      &:last-of-type, &:last-child {
        margin-bottom: 0;
      }
    }
  }
  // Action bar (edit, show citation)
  .source-detail__actions {
    clear: both;
    padding-top: 0.5em;

    .button {
      margin: {
        top: 0;
        bottom: 0;
      }
    }
  }
  // Responsive adjustments
  @media #{$small-up} {
    .source-detail {
      padding: 1em;
      margin-bottom: 2em;
    }
    .source-detail__thumb {
      float: left;
      margin-right: 1.5em;

      img {
        width: 200px;
      }
    }
    .source-detail__info {
      float: left;
    }
  }
  @media #{$medium-up} {
    .source-detail {
      padding: 1.5em;
    }
    .source-detail__thumb {
      margin-right: 2em;
    }
  }

/*
  List of sources
*/

// Container
.source-list {
  margin-left: 0;
  list-style-type: none;
}
  // Individual item in list
  .source-list__item {
    @extend .source-detail;

    a {
      display: block;
      color: black;

      &, &:hover {
        @include transition-property(color);
        @include transition-duration(0.15s);
        @include transition-timing-function(ease-out);
      }
      &:hover {
        color: $primary-color;
      }
    }

    p {
      margin: 0;
      line-height: 1;
      color: inherit;
      margin-bottom: 0.5em;
    }
  }
    // Image or icon for source
    .source-list__item__icon {
      float: left;
      margin-right: 1.5em;
      width: 54px;
      height: 80px;

      .new-source & {
        height: 54px;
      }
    }
    // Title of source
    .source-list__item__title {
      font-size: 1.5em;
      margin-bottom: 0.2em;

      .new-source & {
        line-height: 2;
      }
    }

